Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/6994946/SemanticErrorTest.2.out
- compiler.err.proc.messager: Deliberate Error
SemanticErrorTest.java:13:1: compiler.err.proc.messager: Deliberate Error on Trees
SemanticErrorTest.java:13:46: compiler.err.repeated.interface
3 errors
